Add Title and Phrase

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>나도 1일 1커밋을 해내고야 말테다!!!</h1>
+  <h1 class="title">나도 1일 1커밋을 해내고야 말테다!!!</h1>
+  <section class="phrase">제 1장. Commit 익히기</section>
 </body>
 </html>
